--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 40px;
-    background-color: #1F6BA7;
+    background-color: #465DF6;
     top: 0;
 }
 
